--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "main": "app.js",
   "author": "Andressa Schinoff",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev:server": "ts-node-dev src/server.ts"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   }
 }
