--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev:server": "ts-node-dev src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "winston": "^3.3.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
@@ -19,8 +18,10 @@
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "loglevel": "^1.7.0",
     "prettier": "^2.2.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
