--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "back-feira-na-mao",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "src/server.ts",
   "author": "Andressa Schinoff",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --ignore node_modules src/server.ts"
+    "dev:server": "ts-node-dev --inspect --ignore node_modules src/server.ts",
+    "start": "ts-node src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/dateformat": "^3.0.1",
+    "date-fns": "^2.16.1",
+    "dateformat": "^4.3.1",
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.29",
+    "uuidv4": "^6.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
