--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "back-feira-na-mao",
   "version": "1.0.0",
   "main": "src/server.ts",
@@ -12,16 +12,20 @@
   },
   "dependencies": {
     "@types/dateformat": "^3.0.1",
+    "bcrypt": "^5.0.1",
     "date-fns": "^2.16.1",
     "dateformat": "^4.3.1",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
     "uuidv4": "^6.2.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.14.0",
