feature(Login): implements google strategy

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "@types/dateformat": "^3.0.1",
+    "@tsed/passport": "^6.29.0",
     "bcrypt": "^5.0.1",
     "date-fns": "^2.16.1",
     "dateformat": "^4.3.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-http-bearer": "^1.0.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29",
@@ -24,8 +27,12 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/dateformat": "^3.0.1",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/passport": "^1.0.6",
+    "@types/passport-google-oauth20": "^2.0.6",
+    "@types/passport-http-bearer": "^1.0.36",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.14.0",
