--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "dateformat": "^4.3.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "jsrsasign": "^10.1.13",
+    "jsrsasign-util": "^1.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
@@ -30,6 +33,7 @@
     "@types/dateformat": "^3.0.1",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsrsasign": "^8.0.10",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
     "@types/passport-http-bearer": "^1.0.36",
