--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@tsed/passport": "^6.29.0",
+    "@types/cors": "^2.8.10",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "dateformat": "^4.3.1",
     "express": "^4.17.1",
