--- a/ormconfig.sample.json
+++ b/ormconfig.sample.json
@@ -4,5 +4,11 @@
     "port": 5432,
     "username": "test",
     "password": "test",
-    "database": "test"
+    "database": "test",
+    "synchronize": true,
+    "entities": ["./src/models/*ts"],
+    "migrations": ["./src/database/migrations/*.ts"],
+    "cli": {
+        "migrationsDir": "./src/database/migrations"
+    }
  }
