--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --resolveJsonModule --inspect --ignore node_modules src/server.ts",
-    "start": "ts-node src/server.ts",
+    "start": "nodemon --watch src/ --exec ts-node src/server.ts -e ts",
     "swagger-autogen": "ts-node swagger.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
@@ -50,7 +50,9 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "loglevel": "^1.7.0",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.0",
+    "ts-node": "^10.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   }
