--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --resolveJsonModule --inspect --ignore node_modules src/server.ts",
-    "start": "nodemon --watch src/ --exec ts-node src/server.ts -e ts",
+    "start": "nodemon --watch src/ --exec ts-node src/server.ts -e ts --trace-warnings --unhandled-rejections=strict",
     "swagger-autogen": "ts-node swagger.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@tsed/passport": "^6.29.0",
-    "@types/cors": "^2.8.10",
     "bcrypt": "^5.0.1",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "jsrsasign": "^10.1.13",
-    "jsrsasign-util": "^1.0.5",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
@@ -28,15 +27,15 @@
     "reflect-metadata": "^0.1.13",
     "swagger-autogen": "^2.8.2",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.29",
-    "uuidv4": "^6.2.5"
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/dateformat": "^3.0.1",
+    "@types/cookie-session": "^2.0.42",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/jsrsasign": "^8.0.10",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
     "@types/passport-http-bearer": "^1.0.36",
