--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@tsed/passport": "^6.29.0",
+    "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
+    "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.1",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
@@ -20,6 +23,9 @@
     "express-session": "^1.17.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "order-id": "^2.1.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
@@ -27,7 +33,8 @@
     "reflect-metadata": "^0.1.13",
     "swagger-autogen": "^2.8.2",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
