--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --resolveJsonModule --inspect --ignore node_modules src/server.ts",
-    "start": "nodemon --watch src/ --exec ts-node src/server.ts -e ts --trace-warnings --unhandled-rejections=strict",
+    "dev": "ts-node-dev --inspect --ignore node_modules src/server.ts -e ts",
+    "start": "nodemon --watch src/ --exec ts-node src/server.ts -e ts",
     "swagger-autogen": "ts-node swagger.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
@@ -25,7 +25,6 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "order-id": "^2.1.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-http-bearer": "^1.0.1",
