--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "@tsed/passport": "^6.29.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -40,7 +41,6 @@
     "@types/cookie-session": "^2.0.42",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
-    "@types/express-session": "^1.17.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.6",
